Vertically center footer navigation arrows.

--- a/css/sass/_footer.sass
+++ b/css/sass/_footer.sass
@@ -18,6 +18,7 @@ footer
         text-align: center
         text-transform: uppercase
         width: 50%
+        height: 145px
 
         &.previous
           background: image-url('chapter-previous.svg') left no-repeat
@@ -52,7 +53,7 @@ footer
               border-bottom-color: $green
 
     div
-      margin-top: 5em
+      margin-top: 3em
 
       p
         color: #fff
