--- a/css/style.css
+++ b/css/style.css
@@ -714,43 +714,44 @@ footer {
     font-family: "Bodoni MT W01";
     text-align: center;
     text-transform: uppercase;
-    width: 50%; }
-    /* line 22, sass/_footer.sass */
+    width: 50%;
+    height: 145px; }
+    /* line 23, sass/_footer.sass */
     footer .contents nav li.previous {
       background: url('../img/chapter-previous.svg?1369355902') left no-repeat;
       float: left; }
-    /* line 26, sass/_footer.sass */
+    /* line 27, sass/_footer.sass */
     footer .contents nav li.next {
       background: url('../img/chapter-next.svg?1369351919') right no-repeat;
       float: right; }
-    /* line 30, sass/_footer.sass */
+    /* line 31, sass/_footer.sass */
     footer .contents nav li a {
       display: block;
       text-decoration: none; }
-      /* line 34, sass/_footer.sass */
+      /* line 35, sass/_footer.sass */
       footer .contents nav li a .label {
         border-bottom: 2px solid #aaaaaa;
         color: #aaaaaa;
         display: inline-block;
         padding-bottom: 0;
         font-size: 19.2px; }
-      /* line 41, sass/_footer.sass */
+      /* line 42, sass/_footer.sass */
       footer .contents nav li a .chapter_title {
         display: block;
         font-size: 30px;
         line-height: 1.1;
         margin: 0.5em auto 0 auto;
         width: 60%; }
-      /* line 48, sass/_footer.sass */
+      /* line 49, sass/_footer.sass */
       footer .contents nav li a:hover {
         color: #548e85; }
-        /* line 51, sass/_footer.sass */
+        /* line 52, sass/_footer.sass */
         footer .contents nav li a:hover .label {
           border-bottom-color: #548e85; }
-  /* line 54, sass/_footer.sass */
+  /* line 55, sass/_footer.sass */
   footer .contents div {
-    margin-top: 5em; }
-    /* line 57, sass/_footer.sass */
+    margin-top: 3em; }
+    /* line 58, sass/_footer.sass */
     footer .contents div p {
       color: white;
       font-family: "Proxima N W01 Smbd";
@@ -762,39 +763,39 @@ footer {
       -moz-transition: opacity 0.1s;
       -o-transition: opacity 0.1s;
       transition: opacity 0.1s; }
-      /* line 66, sass/_footer.sass */
+      /* line 67, sass/_footer.sass */
       footer .contents div p:hover {
         opacity: 1; }
-      /* line 69, sass/_footer.sass */
+      /* line 70, sass/_footer.sass */
       footer .contents div p a:hover {
         color: white; }
-      /* line 72, sass/_footer.sass */
+      /* line 73, sass/_footer.sass */
       footer .contents div p.pbs {
         float: left; }
-        /* line 75, sass/_footer.sass */
+        /* line 76, sass/_footer.sass */
         footer .contents div p.pbs a {
           text-decoration: none; }
-        /* line 78, sass/_footer.sass */
+        /* line 79, sass/_footer.sass */
         footer .contents div p.pbs img {
           margin-right: 0.5em;
           vertical-align: -6px;
           width: 24px; }
-        /* line 83, sass/_footer.sass */
+        /* line 84, sass/_footer.sass */
         footer .contents div p.pbs span {
           font-size: 20px; }
-      /* line 86, sass/_footer.sass */
+      /* line 87, sass/_footer.sass */
       footer .contents div p.extra {
         float: right;
         font-size: 18px;
         margin-top: 0.35em; }
-        /* line 91, sass/_footer.sass */
+        /* line 92, sass/_footer.sass */
         footer .contents div p.extra #credits-open {
           border-bottom: 2px solid rgba(255, 255, 255, 0.5);
           cursor: pointer;
           margin-left: 1em;
           text-transform: uppercase; }
 
-/* line 97, sass/_footer.sass */
+/* line 98, sass/_footer.sass */
 #credits {
   display: none;
   background: rgba(0, 0, 0, 0.8);
@@ -804,7 +805,7 @@ footer {
   width: 100%;
   height: 100%;
   z-index: 98; }
-  /* line 107, sass/_footer.sass */
+  /* line 108, sass/_footer.sass */
   #credits .credits-content {
     background: white;
     border-radius: 6px;
@@ -819,55 +820,55 @@ footer {
     -webkit-box-shadow: 0 0 35px rgba(0, 0, 0, 0.75);
     -moz-box-shadow: 0 0 35px rgba(0, 0, 0, 0.75);
     box-shadow: 0 0 35px rgba(0, 0, 0, 0.75); }
-    /* line 120, sass/_footer.sass */
+    /* line 121, sass/_footer.sass */
     #credits .credits-content h2 {
       font-family: "BodoniW01-PosterItalic";
       font-size: 32px;
       margin: 0;
       padding: 0;
       text-align: left; }
-    /* line 127, sass/_footer.sass */
+    /* line 128, sass/_footer.sass */
     #credits .credits-content h3 {
       font-family: "Proxima N W01 Bold";
       font-size: 18px;
       text-transform: uppercase; }
-      /* line 132, sass/_footer.sass */
+      /* line 133, sass/_footer.sass */
       #credits .credits-content h3 span {
         color: #aaaaaa;
         font-size: 85%;
         margin-left: 0.5em;
         text-transform: none; }
-    /* line 139, sass/_footer.sass */
+    /* line 140, sass/_footer.sass */
     #credits .credits-content ul li {
       color: #aaaaaa;
       font-family: "Proxima N W01 Smbd";
       font-size: 14px; }
-      /* line 144, sass/_footer.sass */
+      /* line 145, sass/_footer.sass */
       #credits .credits-content ul li strong {
         color: #383838;
         font-family: "Proxima N W01 Bold";
         font-size: 16px;
         font-weight: normal;
         margin-right: 0.5em; }
-    /* line 151, sass/_footer.sass */
+    /* line 152, sass/_footer.sass */
     #credits .credits-content a {
       text-decoration: none; }
-    /* line 154, sass/_footer.sass */
+    /* line 155, sass/_footer.sass */
     #credits .credits-content .photo_credits {
       opacity: 0.5; }
-      /* line 157, sass/_footer.sass */
+      /* line 158, sass/_footer.sass */
       #credits .credits-content .photo_credits h3 {
         font-size: 16px;
         margin-bottom: 0.5em;
         text-transform: none; }
-      /* line 162, sass/_footer.sass */
+      /* line 163, sass/_footer.sass */
       #credits .credits-content .photo_credits ul li {
         font-size: 13px; }
-        /* line 165, sass/_footer.sass */
+        /* line 166, sass/_footer.sass */
         #credits .credits-content .photo_credits ul li strong {
           font-family: "Proxima N W01 Smbd";
           font-size: 13px; }
-    /* line 169, sass/_footer.sass */
+    /* line 170, sass/_footer.sass */
     #credits .credits-content #credits-close {
       color: #aaaaaa;
       cursor: pointer;
@@ -879,7 +880,7 @@ footer {
       top: 0;
       right: 0;
       z-index: 10; }
-      /* line 181, sass/_footer.sass */
+      /* line 182, sass/_footer.sass */
       #credits .credits-content #credits-close:hover {
         color: #383838; }
 
