--- a/css/sass/_chapter1.sass
+++ b/css/sass/_chapter1.sass
@@ -66,11 +66,10 @@
     .percent_50 .pie_slice
       @include transform(rotate(0deg))
 
-  .expectation_chart
-    background: image-url('1/expectation_chart.svg') left top no-repeat
-    background-size: contain
+  .percentage_of_workers-chart
+    background: image-url('1/percentage_of_workers-chart.gif') left top no-repeat
     margin: 5em 0 2em -40px
-    width: 870px
+    width: 860px
     height: 280px
     position: relative
 
@@ -96,27 +95,27 @@
         margin-top: 0
         opacity: 1
 
-      &#expectation_chart-data_point-1
+      &#percentage_of_workers-chart-data_point-1
         left: 157px
         top: 80px
         @include transition-delay(.2s)
 
-      &#expectation_chart-data_point-2
+      &#percentage_of_workers-chart-data_point-2
         left: 319px
         top: 46px
         @include transition-delay(.4s)
 
-      &#expectation_chart-data_point-3
+      &#percentage_of_workers-chart-data_point-3
         left: 475px
         top: 38px
         @include transition-delay(.6s)
 
-      &#expectation_chart-data_point-4
+      &#percentage_of_workers-chart-data_point-4
         left: 642px
         top: 2px
         @include transition-delay(.8s)
 
-      &#expectation_chart-data_point-5
+      &#percentage_of_workers-chart-data_point-5
         background: $green
         @include triangle-bottom(4px, $green, down)
         left: 804px
