--- a/css/sass/_chapter3.sass
+++ b/css/sass/_chapter3.sass
@@ -30,3 +30,183 @@
   .intro
     p
       @extend .major
+
+  .if_you_look_at
+    @extend .quotation.right
+
+    .contents
+      @include clearfix
+      @extend .border-top
+      @extend .border-bottom
+
+  .financially_unprepared
+    .first
+      @extend .major
+
+    .second,
+    .third
+      font-size: 20px
+      text-align: center
+
+    .financially_unprepared-chart
+      background: image-url('3/financially_unprepared-chart.gif') left top no-repeat
+      margin: 5em 0 2em -50px
+      width: 850px
+      height: 310px
+      position: relative
+
+      .data_point
+        background: rgba(0, 0, 0, .8)
+        color: #fff
+        display: block
+        text-align: center
+        position: absolute
+        bottom: 40px
+        width: 160px
+        height: 0
+        overflow: hidden
+        @include transition(all .3s)
+
+        strong
+          display: block
+          font-family: $bodoni-poster-italic
+          font-size: $font-size*1.5
+          position: absolute
+          left: 34%
+          bottom: 10px
+
+        &#financially_unprepared-chart-data_point-1
+          left: 107px
+          @include transition-delay(.2s)
+
+          &.active
+            height: 120px            
+
+        &#financially_unprepared-chart-data_point-2
+          left: 372px
+          @include transition-delay(.4s)
+
+          &.active
+            height: 155px
+
+        &#financially_unprepared-chart-data_point-3
+          background: $green
+          left: 637px
+          @include transition-delay(.6s)
+
+          &.active
+            height: 226px
+
+  .sheryl_garrett
+    @extend .left
+
+    .contents
+      background-position: 92% 200px !important
+      padding-bottom: 0
+
+  .investor_underperforms
+    .contents
+      padding-top: 0
+
+    p
+      @extend .major
+      font-size: 26px
+
+    .investor_underperforms-chart
+      background: image-url('3/investor_underperforms-chart.gif') left top no-repeat
+      margin: 0 0 0 -62px
+      width: 860px
+      height: 404px
+      position: relative
+
+      .data_point.bar
+        background: rgba(0, 0, 0, .8)
+        color: #fff
+        display: block
+        text-align: center
+        position: absolute
+        bottom: 108px
+        width: 40px
+        height: 0
+        overflow: hidden
+        @include transition(all .3s)
+
+        &#investor_underperforms-chart-data_point-1
+          left: 97px
+          @include transition-delay(.2s)
+
+          &.active
+            height: 242px            
+
+        &#investor_underperforms-chart-data_point-2
+          left: 195px
+          @include transition-delay(.3s)
+
+          &.active
+            height: 217px
+
+        &#investor_underperforms-chart-data_point-3
+          left: 295px
+          @include transition-delay(.4s)
+
+          &.active
+            height: 217px
+
+        &#investor_underperforms-chart-data_point-4
+          left: 394px
+          @include transition-delay(.5s)
+
+          &.active
+            height: 178px
+
+        &#investor_underperforms-chart-data_point-5
+          left: 493px
+          @include transition-delay(.6s)
+
+          &.active
+            height: 128px
+
+        &#investor_underperforms-chart-data_point-6
+          left: 590px
+          @include transition-delay(.7s)
+
+          &.active
+            height: 88px
+
+        &#investor_underperforms-chart-data_point-7
+          left: 690px
+          @include transition-delay(.8s)
+
+          &.active
+            height: 62px
+
+        &#investor_underperforms-chart-data_point-8
+          background: $green
+          left: 788px
+          @include transition-delay(.9s)
+
+          &.active
+            height: 52px
+
+      #investor_underperforms-chart-data_point-9
+        background: rgba(0, 0, 0, .8)
+        border-radius: 2px
+        color: #fff
+        display: inline-block
+        font-family: $bodoni-poster-italic
+        font-size: $font-size*1.5
+        padding: .5em .75em
+        text-align: center
+        margin-top: 10px
+        opacity: 0
+        overflow: inherit
+        position: absolute
+        left: 760px
+        top: 180px
+        @include triangle-bottom(4px, rgba(0, 0, 0, .8), down)
+        @include transition(opacity .3s, margin .3s)
+        @include transition-delay(1s)
+
+        &.active
+          margin-top: 0
+          opacity: 1
