--- a/css/sass/_chapter2.sass
+++ b/css/sass/_chapter2.sass
@@ -49,9 +49,10 @@
       width: 820px
 
   .gender
+    @extend .blend
+
     .contents
       max-width: 100%
-      padding: 0
 
       .form_fields
         padding: 1em 1.5em
