--- a/css/sass/_chapter1.sass
+++ b/css/sass/_chapter1.sass
@@ -168,7 +168,7 @@
       @include boxed(#fff, left, third, centered)
 
   .working_about_the_right_amount
-    @extend .quotation.left
+    @extend .left
 
   .quotation.paul
     //
