--- a/css/sass/_chapter2.sass
+++ b/css/sass/_chapter2.sass
@@ -93,10 +93,10 @@
           width: 330px
 
         &.male
-          @extend .quotation.left
+          @extend .left
 
         &.female
-          @extend .quotation.right
+          @extend .right
 
           blockquote
             float: right
@@ -184,7 +184,7 @@
             opacity: 1          
 
   .joel_peters
-    @extend .video.right
+    @extend .right
     @extend .border-top
     @extend .border-bottom
 
