--- a/css/sass/_base.sass
+++ b/css/sass/_base.sass
@@ -158,7 +158,7 @@ section
   &.copy
     p
       font-size: 18px
-      line-height: 1.3
+      line-height: 1.4
 
   &.quotation
     .contents
@@ -336,7 +336,7 @@ section
   border-bottom: 2px solid $dark
   margin: 0 auto
   padding: .5em 0 .4em 0
-  width: 75%
+  width: $desktop
 
 .form_question
   background: $green
